Closed
Bug 214020
Opened 22 years ago
Closed 22 years ago
Null security callbacks [@ nsHttpConnection::GetInterface]
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
()
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(1 file)
|
798 bytes,
patch
|
bbaetz
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Stack Trace:
nsHttpConnection::GetInterface
[c:/builds/seamonkey/mozilla/netwerk/protocol/http/src/nsHttpConnection.cpp line
777]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
line 102]
nsProxyObject::Post
[c:/builds/seamonkey/mozilla/xpcom/proxy/src/nsProxyEvent.cpp line 479]
nsProxyEventObject::CallMethod
[c:/builds/seamonkey/mozilla/xpcom/proxy/src/nsProxyEventObject.cpp line 547]
PrepareAndDispatch
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp
line 119]
SharedStub
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcstubs.cpp
line 147]
nsNSSSocketInfo::GetInterface
[c:/builds/seamonkey/mozilla/security/manager/ssl/src/nsNSSIOLayer.cpp line 316]
XPTC_InvokeByIndex
[c:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp
line 102]
EventHandler [c:/builds/seamonkey/mozilla/xpcom/proxy/src/nsProxyEvent.cpp line
564]
PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 672]
PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c
line 610]
nsEventQueueImpl::ProcessPendingEvents
[c:/builds/seamonkey/mozilla/xpcom/threads/nsEventQueue.cpp line 391]
Attachment #128599 -
Flags: superreview?(bzbarsky)
Updated•22 years ago
|
Attachment #128599 -
Flags: superreview?(bzbarsky)
Attachment #128599 -
Flags: superreview+
Attachment #128599 -
Flags: review?(bbaetz)
Updated•22 years ago
|
Attachment #128599 -
Flags: review?(bbaetz) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsHttpConnection::GetInterface]
You need to log in
before you can comment on or make changes to this bug.
Description
•