Bug 214020 Null security callbacks [@ nsHttpConnection::GetInterface] r=bbaetz sr=bz